--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,34 @@ ul {
 button {
   cursor: pointer;
 }
+
+
+.d-flex {
+  display: flex;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
+
+
+img {
+  max-width: 100%;
+}
