--- a/src/pages/SignIn/signin.css
+++ b/src/pages/SignIn/signin.css
@@ -24,7 +24,7 @@
   margin-bottom: 50px;
 }
 
-form {
+.form {
   margin-top: 1.5em;
   width: 60%;
   display: flex;
@@ -34,7 +34,7 @@ form {
 
 }
 
-form h1 {
+.form h1 {
   text-align: center;
   margin-bottom: 0.5em;
   color: #181c2e;
@@ -49,7 +49,7 @@ form h1 {
   background-color: #FFF;
 }
 
-form button {
+.form button {
   height: 50px;
   border: 0;
   background-color: #673AB7;
@@ -65,9 +65,11 @@ form button {
 
 .login-area {
   flex: 1;
-  background-image: url('https://cdn.evbstatic.com/s3-build/perm_001/c24baa/django/images/login/lateral-image-3.jpg');
+  background-image: url('../../assets/logo.png');
+  background-repeat: no-repeat;
+  background-color: #482B7B;
   background-position: center;
-  background-size: cover;
+  background-size: 250px;
 }
 
 @media (max-width: 700px){
