--- a/src/components/SideBar/sidebar.css
+++ b/src/components/SideBar/sidebar.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   width: 200px;
-  background-color: #181C2e;
+  background-color: #482b7b;
   position: fixed;
   height: 100%;
   overflow: auto;
