--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -8,27 +8,63 @@ header {
   background-color: #482b7b;
 }
 
-.search {
+.logo-header {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.search input {
-  padding: 4px;
-  margin-left: 15px;
-}
-
-a {
-  text-decoration: none;
-  color: #FFF;
-}
-
-.links-header a {
-  margin-left: 10px;
 }
 
 .logo {
   font-size: 1.8rem;
   color: #FFF;
 }
+
+.logo-header input {
+  padding: 8px;
+  border-radius: 4px;
+  border: none;
+  width: 300px;
+  margin-left: 20px;
+}
+
+
+a {
+  text-decoration: none;
+  color: #FFF;
+}
+
+.navbar-header a {
+  margin-left: 10px;
+}
+
+@media screen and (max-width: 660px){
+  header {
+    display: flex;
+    flex-direction: column;
+    padding-right: 40px;
+    height: 100%;
+  }
+  .logo-header {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .logo-header .logo {
+    margin-bottom: 20px;
+  }
+
+  .navbar-header {
+    width: 100%;
+  }
+
+  .navbar-header a{
+    display: flex;
+    flex-direction: column;
+    font-size: 1rem;
+    margin: 15px 0;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+
