--- a/src/pages/UserEvents/events.css
+++ b/src/pages/UserEvents/events.css
@@ -1,4 +1,4 @@
-  Header{
+  /* Header{
     margin-left: 200px;
     padding: 1px 16px;
     width: calc(100% - 200px);
@@ -9,4 +9,49 @@
     Header {
       display: none;
     }
-  }
+  } */
+.container-dashboard {
+  display: flex;
+  background-color: #f8f8f8;
+  border-radius: 5px;
+  padding: .8em;
+  align-items: center;
+}
+
+.user-events {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.user-events span {
+  margin: 2em 0;
+  font-weight: 600;
+  font-size: 1.2em;
+}
+
+.new {
+  float: right;
+  margin-bottom: 1.5em;
+  background-color: #83bf02;
+  border: 0;
+  padding: .5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  font-size: 1.1em;
+  border-radius: 6px;
+  transition: ease-in 0.2s;
+}
+
+.new svg {
+  margin-right: 5px;
+}
+
+.new:hover{
+  background-color: #5fd204;
+  transform: scale(1.1);
+}
+
