--- a/src/pages/UserEvents/events.css
+++ b/src/pages/UserEvents/events.css
@@ -55,3 +55,89 @@
   transform: scale(1.1);
 }
 
+
+/* Table */
+
+table {
+  border: 1px solid #CCC;
+  border-collapse: collapse;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  table-layout: fixed;
+}
+
+table caption {
+  font-size: 1.5em;
+  margin: .5em 0 .75em;
+}
+
+table tr {
+  background-color: #f8f8f8;
+  border: 1px solid #ddd;
+  padding: .35em;
+}
+
+table th, table td {
+  padding: .62em;
+  text-align: center;
+}
+
+table th {
+  font-size: .85em;
+  letter-spacing: .1em;
+  text-transform: uppercase;
+}
+
+table td .action {
+  border: 0;
+  padding: 5px;
+}
+
+table .badge{
+  padding: 3px;
+  border-radius: 4px;
+  color: #FFF;
+  
+}
+
+@media screen and (max-width: 600px){
+  table{
+    border:0;
+  }
+  table caption {
+    font-size: 1.3em;
+  }
+  table thead{
+    border: none;
+    clip: rect(0 0 0 0);
+    margin: -1px;
+    height: 1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
+
+  table tr{
+    border-bottom: 3px solid #ddd;
+    display: block;
+    margin-bottom: .65em;
+  }
+  table td{
+    border-bottom: 1px solid #DDD;
+    display: block;
+    font-size: .8em;
+    text-align: right;
+  }
+  table td::before{
+    content: attr(data-label);
+    float: left;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+  table td:last-child{
+    border-bottom: 0;
+  }
+}
